--- a/app/src/main/res/layout/paimai_tuijian_item.xml
+++ b/app/src/main/res/layout/paimai_tuijian_item.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     app:clipBorderColor="@color/gray_99"
     app:clipBorderWidth="1px"
@@ -15,10 +16,11 @@
         android:layout_height="wrap_content"
         >
         <ImageView
+            android:id="@+id/iv_paimai_tuijian"
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:adjustViewBounds="true"
-            android:src="@drawable/qq"
+            tools:src="@drawable/qq"
+            android:scaleType="centerCrop"
             />
         <TextView
             android:layout_width="match_parent"
@@ -28,7 +30,7 @@
             android:paddingBottom="3dp"
             android:paddingLeft="5dp"
             android:paddingTop="3dp"
-            android:text="预展中"
+            tools:text="预展中"
             />
     </FrameLayout>
     <TextView
