--- a/app/src/main/res/layout/auction_detail_act.xml
+++ b/app/src/main/res/layout/auction_detail_act.xml
@@ -21,11 +21,53 @@
                 android:background="@color/bg_color"
                 >
                 <!--your view-->
-                <android.support.v4.view.ViewPager
+                <FrameLayout
+                    android:id="@+id/fl_goods_banner"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp">
+                    android:layout_height="180dp">
+                </FrameLayout>
 
-                </android.support.v4.view.ViewPager>
+                <LinearLayout
+                    android:id="@+id/ll_goods_banner_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    >
+                    <com.github.fastshape.MyTextView
+                        android:id="@+id/tv_goods_banner_video"
+                        android:layout_width="wrap_content"
+                        android:layout_height="22dp"
+                        android:layout_marginRight="15dp"
+                        android:gravity="center"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        android:text="视频"
+                        android:textColor="@color/white"
+                        app:all_line="true"
+                        app:borderColor="@color/gray_66"
+                        app:radius="11dp"
+                        app:solidColor="@color/gray_66"
+                        />
+
+                    <com.github.fastshape.MyTextView
+                        android:id="@+id/tv_goods_banner_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="22dp"
+                        android:layout_marginRight="15dp"
+                        android:gravity="center"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        android:text="图片"
+                        android:textColor="@color/gray_66"
+                        app:all_line="true"
+                        app:borderColor="@color/gray_66"
+                        app:radius="11dp"
+                        app:solidColor="@color/white"
+                        />
+                </LinearLayout>
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
