--- a/app/src/main/res/layout/paimai_all_item.xml
+++ b/app/src/main/res/layout/paimai_all_item.xml
@@ -46,6 +46,12 @@
             android:textColor="@color/white"
             android:gravity="right"
             />
+        <ImageView
+            android:id="@+id/iv_paimai_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/lingyuanpai"
+            />
     </FrameLayout>
     <TextView
         android:id="@+id/tv_paimai_goods_name"
