--- a/app/src/main/res/layout/paimai_chujia_popu.xml
+++ b/app/src/main/res/layout/paimai_chujia_popu.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:background="@color/bg_color"
     >
 <com.github.fastshape.MyLinearLayout
@@ -21,9 +22,10 @@
         android:textSize="14sp"
         />
     <TextView
+        android:id="@+id/tv_paimai_chujia_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="11:11:11"
+        tools:text="11:11:11"
         android:textSize="14sp"
         android:textColor="@color/red"
         />
@@ -43,9 +45,10 @@
             android:textSize="14sp"
             />
         <TextView
+            android:id="@+id/tv_paimai_chujia_jiajia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100元"
+            tools:text="100元"
             android:textSize="14sp"
             />
     </com.github.fastshape.MyLinearLayout>
@@ -63,28 +66,34 @@
             android:text="出价："
             android:textSize="14sp"
             />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/qq"
+        <ImageButton
+            android:id="@+id/iv_paimai_chujia_jian"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/chujia_jian"
+            android:background="@color/transparent"
             />
         <com.github.fastshape.MyTextView
+            android:id="@+id/tv_paimai_chujia_price"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="12321323"
+            tools:text="12321323"
             android:ems="9"
             android:textColor="@color/red"
             android:gravity="center"
             android:layout_margin="9dp"
             app:all_line="true"
             />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/qq"
+        <ImageButton
+            android:id="@+id/iv_paimai_chujia_jia"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/chujia_jia"
+            android:background="@color/transparent"
             />
     </com.github.fastshape.MyLinearLayout>
     <com.github.fastshape.MyTextView
+        android:id="@+id/tv_paimai_chujia_commit"
         android:layout_width="match_parent"
         android:layout_height="43dp"
         android:text="出价"
