--- a/app/src/main/res/layout/paimai_chujia_item.xml
+++ b/app/src/main/res/layout/paimai_chujia_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
@@ -14,10 +15,12 @@
     android:padding="10dp"
     >
     <com.github.fastshape.MyImageView
+        android:id="@+id/iv_chujia_person"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/qq"
+        android:src="@drawable/default_person"
         app:clipRadius="20dp"
+        android:scaleType="centerCrop"
         />
     <LinearLayout
         android:layout_width="0dp"
@@ -28,16 +31,18 @@
         android:layout_marginLeft="10dp"
         >
         <TextView
+            android:id="@+id/tv_chujia_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="李大头"
+            tools:text="李大头"
             android:textColor="@color/gray_66"
             android:textSize="14sp"
             />
         <TextView
+            android:id="@+id/tv_chujia_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="出价:¥12323"
+            tools:text="出价:¥12323"
             android:textSize="11sp"
             android:layout_marginTop="3dp"
             />
@@ -49,6 +54,7 @@
         android:gravity="center_vertical"
         >
         <com.github.fastshape.MyTextView
+            android:id="@+id/tv_chujia_flag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="领先"
@@ -63,9 +69,10 @@
             android:textSize="12sp"
             />
         <TextView
+            android:id="@+id/tv_chujia_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="09-03 11:11"
+            tools:text="09-03 11:11"
             android:textSize="11sp"
             android:layout_marginTop="3dp"
             />
