--- a/app/src/main/res/layout/paimai_order_item.xml
+++ b/app/src/main/res/layout/paimai_order_item.xml
@@ -3,6 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              xmlns:tools="http://schemas.android.com/tools"
               android:background="@color/bg_color"
               android:orientation="vertical"
     >
@@ -17,16 +18,18 @@
         >
 
         <TextView
+            android:id="@+id/tv_paimai_order_no"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="订单号:EX123123123"
+            tools:text="订单号:EX123123123"
             />
 
         <TextView
+            android:id="@+id/tv_paimai_order_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="拍卖中"
+            tools:text="拍卖中"
             android:textColor="@color/red"
             />
     </LinearLayout>
@@ -41,35 +44,38 @@
         android:padding="10dp"
         >
         <ImageView
-            android:id="@+id/iv_my_auction"
+            android:id="@+id/iv_paimai_order"
             android:layout_width="80dp"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:src="@drawable/qq"
+            android:layout_height="80dp"
+            android:scaleType="centerCrop"
+            tools:src="@drawable/qq"
             />
         <TextView
+            android:id="@+id/tv_paimai_order_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠"
-            android:layout_toRightOf="@+id/iv_my_auction"
+            tools:text="御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠"
+            android:layout_toRightOf="@+id/iv_paimai_order"
             android:layout_marginLeft="10dp"
             android:maxLines="4"
             android:ellipsize="end"
             android:textColor="@color/gray_33"
             />
         <TextView
+            android:id="@+id/tv_paimai_order_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="¥97"
+            tools:text="当前价: ¥97"
             android:textColor="@color/red"
-            android:layout_toRightOf="@+id/iv_my_auction"
+            android:layout_toRightOf="@+id/iv_paimai_order"
             android:layout_marginLeft="10dp"
             android:layout_alignParentBottom="true"
             />
         <TextView
+            android:id="@+id/tv_paimai_order_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="x1"
+            tools:text="x1"
             android:layout_marginLeft="10dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
@@ -89,20 +95,23 @@
         android:paddingRight="10dp"
         >
         <TextView
+            android:id="@+id/tv_paimai_order_time"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="2018-01-01 12:12:12"
+            tools:text="2018-01-01 12:12:12"
             />
         <TextView
+            android:id="@+id/tv_paimai_order_goods_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="共1件商品"
+            tools:text="共1件商品"
             />
         <TextView
+            android:id="@+id/tv_paimai_order_total_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="合计:¥21"
+            tools:text="合计:¥21"
             android:layout_marginLeft="5dp"
             />
     </LinearLayout>
@@ -119,35 +128,22 @@
         android:layout_margin="10dp"
         >
         <com.github.fastshape.MyTextView
+            android:id="@+id/tv_paimai_order_again_chujia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="取消订单"
+            android:text="再次出价"
             android:layout_gravity="right"
             android:paddingRight="10dp"
             android:paddingLeft="10dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             app:radius="5dp"
-            app:solidColor="@color/gray_d7"
+            app:solidColor="@color/red"
             android:textColor="@color/white"
             android:layout_marginLeft="10dp"
             />
         <com.github.fastshape.MyTextView
-            android:id="@+id/tv_order_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="删除订单"
-            android:layout_gravity="right"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            app:radius="5dp"
-            app:solidColor="@color/gray_66"
-            android:textColor="@color/white"
-            android:layout_marginLeft="10dp"
-            />
-        <com.github.fastshape.MyTextView
+            android:id="@+id/tv_paimai_order_pay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="去支付"
@@ -162,6 +158,7 @@
             android:layout_marginLeft="10dp"
             />
         <com.github.fastshape.MyTextView
+            android:id="@+id/tv_paimai_order_sure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="确认收货"
@@ -175,20 +172,5 @@
             android:textColor="@color/white"
             android:layout_marginLeft="10dp"
             />
-        <com.github.fastshape.MyTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="申请退款"
-            android:layout_gravity="right"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            app:radius="5dp"
-            app:solidColor="@color/red"
-            android:textColor="@color/white"
-            android:layout_marginLeft="10dp"
-            />
     </LinearLayout>
-
 </LinearLayout>
